<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QSD Movies</string>
    <string name="webclient_id">3604724225-fg2kabc2avq1q3mm2sejq4jche0fvlo8.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1505293729936521</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">a44a2a476c505b82d535ec05d166c9eb</string>


    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgot">FORGOT?</string>
    <string name="login">LOGIN</string>
    <string name="social_logins">Social Logins</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_yout_password">Enter the email address you used to create your account and we will email you a link to reset yout password</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="movies">Movies</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="watching">Watching</string>
    <string name="top_rated">Top Rated</string>
    <string name="tv_show">Tv Show</string>
    <string name="cast">Cast</string>
    <string name="known_for">Known for</string>
    <string name="contact">Contact</string>
    <string name="language">Language</string>
    <string name="movie_adventure_comedy_family">Movie | Adventure | Comedy | Family</string>
    <string name="moviess">Movies</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_subject_details">Enter Subject Details</string>
    <string name="enter_message">Enter Message</string>
    <string name="emaill">EMAIL</string>
    <string name="the_name_of_the_movie">the name of the movie</string>
    <string name="watch_now">WATCH NOW</string>
    <string name="emaiil">EMAIL</string>
    <string name="passwordd">PASSWORD</string>
    <string name="registerr">REGISTER</string>
    <string name="first_namee">First name</string>
    <string name="premium">Premium</string>
    <string name="choose_language">Choose Language</string>
    <string name="contact_us">CONTACT US</string>
    <string name="back">BACK</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="update">UPDATE</string>
    <string name="first_nameeee">FIRST NAME</string>
    <string name="last_nameee">LAST NAME</string>
    <string name="enter_emaill">Enter email</string>
    <string name="enter_subject_detailss">ENTER SUBJECT DETAILS</string>
    <string name="enter_messagee">ENTER MESSAGE</string>
    <string name="error_ocoured">Error Ocoured</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="failed_to_update">Failed to Update</string>
    <string name="email_field_cant_be_empty">email field can\'t be empty</string>
    <string name="subject_field_cant_be_empty">subject field can\'t be empty</string>
    <string name="message_field_cant_be_empty">message field can\'t be empty</string>
    <string name="invalid_email_address">invalid email address</string>
    <string name="choose_email_client">Choose Email Client…</string>
    <string name="please_check_your_email">Please Check your Email</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="password_field_cant_be_empty">password field can\'t be empty</string>
    <string name="password_minimum_contain_8_character">password minimum contain 8 character</string>
    <string name="password_maximum_contain_32_character">password maximum contain 32 character</string>
    <string name="please_enter_password">please enter password</string>
    <string name="login_failed">Login Failed</string>
    <string name="receiveddata_uri_is_empty">ReceivedData uri is empty.</string>
    <string name="select_picture">Select Picture</string>
    <string name="successfully_uploaded">Successfully uploaded</string>
    <string name="failed_to_upload">Failed to upload</string>
    <string name="confirm_password_do_not_match">password and confirm password do not match</string>
    <string name="user_already_exists">user already exists</string>
    <string name="Are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="press_back_again_to_exit_app">Press back again to exit app</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="notifications_are_not_allowed">Notifications are not allowed</string>
    <string name="notifications_are_allowed">Notifications are allowed</string>
    <string name="notifications_are_required_to_keep_you_updated_on_new_content">Notifications are required to keep you updated on new content.</string>
    <string name="you_declined_and_we_can_no_longer_show_you_notifications">You declined and we can no longer show you notifications</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="ok">Ok</string>
    <string name="dark_mode">Dark mode</string>

</resources>